frontend: refactor sass vars + fix modal on mobile

--- a/projects/site/src/sass/_mixins.scss
+++ b/projects/site/src/sass/_mixins.scss
@@ -75,3 +75,8 @@
   -moz-box-shadow: $top $left $blur $size $color;
   box-shadow: $top $left $blur $size $color;
 }
+
+@mixin blur($amount) {
+  -webkit-backdrop-filter: blur($amount);
+  backdrop-filter: blur($amount);
+}
