--- a/projects/site/src/sass/_typography.scss
+++ b/projects/site/src/sass/_typography.scss
@@ -1,11 +1,3 @@
-$collectionFontSize: clamp(0.15rem, 0.75rem + 5vw, 2rem);
-$fixed-header: 2rem;
-
-* {
-  font-family: sans-serif;
-  text-decoration: none;
-}
-
 h1 {
   font-size: clamp(1rem, 1.5rem + 10vw, 4rem);
 }
@@ -18,12 +10,4 @@ textarea {
 
 button {
   font-size: clamp(0.15rem, 0.75rem + 5vw, 1rem);
-}
-
-a {
-  color: var(--text-color);
-
-  &:hover {
-    text-decoration: underline;
-  }
 }
